[gd_scene load_steps=8 format=3 uid="uid://kv41fbsf0x15"]

[ext_resource type="Theme" uid="uid://08b538gi4l1t" path="res://ui/theme.theme" id="1_clnlx"]
[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_jw1ke"]
[ext_resource type="LabelSettings" uid="uid://c52euoq5c832g" path="res://ui/title.tres" id="2_moum8"]
[ext_resource type="Texture2D" uid="uid://d5wujj0vjku7" path="res://assets/graphics/continue.png" id="3_fwmsq"]
[ext_resource type="Texture2D" uid="uid://5q8j0vofmyrs" path="res://assets/graphics/continue_selected.png" id="4_dxi01"]
[ext_resource type="Texture2D" uid="uid://brqfluv7qwxgr" path="res://assets/graphics/main_menu.png" id="5_x30u0"]
[ext_resource type="Texture2D" uid="uid://bqhk1as5wsnq" path="res://assets/graphics/main_menu_selected.png" id="6_wkqjl"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_jw1ke")

[node name="Layout" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_clnlx")

[node name="Background" type="ColorRect" parent="Layout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.105882, 0.141176, 1)

[node name="Title" type="Label" parent="Layout"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Paused"
label_settings = ExtResource("2_moum8")
horizontal_alignment = 1

[node name="Menu" type="VBoxContainer" parent="Layout"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -10.0
offset_right = 36.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="TextureButton" parent="Layout/Menu"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_fwmsq")
texture_focused = ExtResource("4_dxi01")

[node name="MainMenuButton" type="TextureButton" parent="Layout/Menu"]
layout_mode = 2
texture_normal = ExtResource("5_x30u0")
texture_focused = ExtResource("6_wkqjl")

[connection signal="pressed" from="Layout/Menu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Layout/Menu/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
